[package]
name = "xcm-simulator-example"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Shaun Wang <spxwang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

# cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }

# polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }

xcm-simulator = { path = "../" }
